tdf#138890 weld::LabelType::Warning uses default white font color

Change-Id: I19e95903ad7d23e4d95a212e0d0392d15c0cf0ce